# pep723-pipx-poetry-experiments

./: README.md  pyproject.toml  scripts.py
src/pep723_pipx_poetry_experiments/: __init__.py
